The Andromeda 0.2 release contains bug fixes and new features.

Global
   * Now Cmake builds portable application on Win/Mac
   * Updated russian translations
   * Added translation to portuguese

Bookmarks plugin
   * Move bookmarks code from separate lib to Bookmarks plugin

Core plugin
   * Add Shortcut settings page
   * Application is no longer quits when last window is closed
   * Add dock menu on Mac and tray menu on Linux/Windows
   * Preferences dialog is no longer modal
   * Preferences dialog now stores it's state when closed

FileManager plugin
   * Changed UI for FileInfo dialog
   * Various fixes for FileCopy dialog
   * Dual pane have independent panes now (view mode and sorting are set separately for each pane)
   * Implemented Eject button for navigation panel
   * Fix displaying folder name in tab/window

WebView plugin
   * Add Appearance, Privacy and Proxy settings pages
   * Implemented Cookie management
   * Remove Global settings page
