@@ -190,9 +190,11 @@ void FileManagerEditor::restoreDefaults()
     int sortOrder = m_settings->value(QLatin1String("fileManager/sortingOrder")).toInt();
     int sortColumn = m_settings->value(QLatin1String("fileManager/sortingColumn")).toInt();
     int viewMode = m_settings->value(QLatin1String("fileManager/viewMode")).toInt();
+    int orientation = m_settings->value(QLatin1String("fileManager/orientation")).toInt();
     m_widget->setSortingOrder((Qt::SortOrder)sortOrder);
     m_widget->setSortingColumn((FileManagerWidget::Column)sortColumn);
     m_widget->setViewMode((FileManagerWidget::ViewMode)viewMode);
+    m_widget->setOrientation((Qt::Orientation)orientation);
     m_widget->blockSignals(false);
 }
 
@@ -285,6 +287,14 @@ void FileManagerEditor::onSortingChanged()
 
     m_settings->setValue(QLatin1String("fileManager/sortingOrder"), sortOrder);
     m_settings->setValue(QLatin1String("fileManager/sortingColumn"), sortColumn);
+}
+
+/*!
+  \internal
+*/
+void FileManagerEditor::onOrientationChanged(Qt::Orientation orientation)
+{
+    m_settings->setValue(QLatin1String("fileManager/orientation"), orientation);
 }
 
 /*!
@@ -384,6 +394,7 @@ void FileManagerEditor::setupConnections()
     connect(m_widget, SIGNAL(openNewTabRequested(QStringList)), SLOT(openNewTab(QStringList)));
     connect(m_widget, SIGNAL(openNewWindowRequested(QStringList)), SLOT(openNewWindow(QStringList)));
     connect(m_widget, SIGNAL(sortingChanged()), SLOT(onSortingChanged()));
+    connect(m_widget, SIGNAL(orientationChanged(Qt::Orientation)), SLOT(onOrientationChanged(Qt::Orientation)));
     connect(m_widget, SIGNAL(viewModeChanged(FileManagerWidget::ViewMode)), SLOT(onViewModeChanged(FileManagerWidget::ViewMode)));
 
     connect(m_panel, SIGNAL(triggered(QString)), m_widget, SLOT(setCurrentPath(QString)));
@@ -429,6 +440,7 @@ void FileManagerEditor::createActions()
     registerAction(m_widget->action(DualPaneWidget::TreeMode), Constants::Actions::TreeMode);
     registerAction(m_widget->action(DualPaneWidget::CoverFlowMode), Constants::Actions::CoverFlowMode);
     registerAction(m_widget->action(DualPaneWidget::EnableDualPane), Constants::Actions::DualPane);
+    registerAction(m_widget->action(DualPaneWidget::VerticalPanels), Constants::Actions::VerticalPanels);
 
     registerAction(m_widget->action(DualPaneWidget::SortByName), Constants::Actions::SortByName);
     registerAction(m_widget->action(DualPaneWidget::SortBySize), Constants::Actions::SortBySize);
