@@ -21,6 +21,7 @@ FileManager plugin
    * Dual pane have independent panes now (view mode and sorting are set separately for each pane)
    * Implemented Eject button for navigation panel
    * Fix displaying folder name in tab/window
+   * Add splitter in dual pane and possibility to layout panels vertically
 
 WebView plugin
    * Add Appearance, Privacy and Proxy settings pages
